source-code-project/aarna-stream/authproxy/istio-filter/auth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "emcoauth"
spec:
  selector:
    matchLabels:
      app: orchestrator 
  jwtRules:
  - issuer: "http://192.168.122.185:30774/auth/realms/EMCO"
    jwksUri: "http://192.168.122.185:30774/auth/realms/EMCO/protocol/openid-connect/certs"
