source-code-project/aarna-stream/authproxy/istio-filter/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: emco-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
